--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,5 @@ spring.thymeleaf.cache=false
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
 # ==============================================================
-spring.queries.users-query=select email, senha, situacao from anunciante where email=?
-# spring.queries.roles-query=select u.email, r.role from usuario u inner join usuario_role ur on(u.usuario_id=ur.usuario_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.usuarios-query=select email, senha, situacao from usuario where email=?
+spring.queries.roles-query=select u.email, r.role from usuario u inner join usuario_role ur on(u.usuario_cpf=ur.usuario_cpf) inner join role r on(ur.role_id=r.role_id) where u.email=?
