--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# spring.datasource.testWhileIdle = true
-# spring.datasource.validationQuery = SELECT 1
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
@@ -35,13 +34,8 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
-# ===============================
-# = Spring Session
-# ===============================
-spring.session.store-type=redis
-server.servlet.session.timeout= 1800000ms
-spring.session.redis.flush-mode=on-save
-spring.session.redis.namespace=spring:session
-spring.redis.host=localhost
-spring.redis.password= # Login password of the redis server.
-spring.redis.port=6379
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, senha, situacao from usuario where email=?
+spring.queries.roles-query=select u.email, r.role from usuario u inner join usuario_role ur on(u.usuario_cpf=ur.usuario_cpf) inner join role r on(ur.role_id=r.role_id) where u.email=?
